--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type = TRACE
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+spring.main.allow-circular-references = true
