--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#Sql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bookless
 spring.datasource.username=root
@@ -6,3 +7,11 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 spring.main.allow-circular-references = true
+
+#Mail Sending
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=srivastava20000saurav@gmail.com
+spring.mail.password=lvbqyzamdeclszjc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
